fixed text alignment above icons on low-width windows

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -535,3 +535,7 @@ background: white;
     color: black;
   }
 }
+
+.mobile-text-div {
+  margin-bottom: 0!important;
+}
